--- a/css/viacom.css
+++ b/css/viacom.css
@@ -187,6 +187,10 @@ body{
     margin: 3rem 0 0 0;
 }
 
+.overview{
+    padding: 0 0 2rem 0;
+}
+
 .overview h1{
     font-size: 3.6rem;
     letter-spacing: .4rem;
@@ -197,13 +201,14 @@ body{
 }
 
 .overview h2{
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     letter-spacing: .1rem;
     color: #f5e5f3;
-    font-weight: 700;
+    font-weight: 400;
     text-align: center;
     width: 85%;
     margin: 2.4rem auto;
+    line-height: 1.9rem;
 }
 
 .key-diss{
@@ -393,7 +398,7 @@ body{
     width: 25rem;
     font-size: 1.4rem;
     letter-spacing: .1rem;
-    line-height: 1.6rem;
+    line-height: 2rem;
     color: #fff;
     font-weight: 600;
     text-align: center;
@@ -513,6 +518,7 @@ body{
     font-weight: 400;
     width: 50rem;
     text-align: left;
+    margin: .5rem 0 0 0;
 }
 
 .who-should{
@@ -1000,154 +1006,739 @@ body{
         margin: 0;
     }
 
+    .who-should h1{
+        font-size: 2.6rem;
+    }
 
+    .phonePro-logo{
+        scale: .8;
+    }
 
+    .right-wrap{
+        margin: 5rem 0 0 0;
+    }
 
+    .left-who i{
+        margin: 5rem 0 0 0;
+    }
 
+    .tick-logo{
+        scale: .7;
+    }
 
-.who-should h1{
-    font-size: 2.6rem;
+    .tick-who h1{
+        font-size: 1.4rem;
+        font-weight: 700;
+        margin: 2.7rem 0 0 0;
+    }
+
+    .tick-who i{
+        margin: 3rem 1rem 0 0;
+    }
+
+    .Why-attend h1{
+        font-size: 2.6rem;
+    }
+
+    .left-lock h2{
+        font-size: 1.2rem;
+        width: 20rem;
+        margin: -.2rem .4rem 0 0;
+    }
+
+    .left-lock i{
+        margin: -.1rem 0 0 .4rem;
+    }
+
+    .lock-logo{
+        scale: .9;  
+    }
+
+    .mid-why i{
+        margin: -2rem 0 0 0;
+    }
+
+    .digilock-logo{
+        scale: .8; 
+    }
+
+    .right-lock{
+        display: flex;
+        margin: 2rem 0;
+    }
+
+    .right-lock h2{
+        font-size: 1.2rem;
+        width: 20rem; 
+        margin: -.2rem .4rem 0 0;  
+    }
+
+    .right-lock i{
+        margin: -.1rem .4rem 0 0;
+    }
+
+    .why-elem{
+        margin: 0 0 2rem 0;
+    }
+
+    .venue{
+        padding: 6rem;
+    }
+
+    .venue h1{
+        font-size: 3rem;
+        margin: 1rem 0 6rem 0;
+    }
+
+    .google-map iframe{
+        height: 25rem;
+        width: 40rem;
+        border-radius: .5rem;
+    }
+
+    .Address{
+        width: 60rem;
+        height: 6.5rem;
+        margin: 4rem 0 0;
+    }
+
+    .Address h1{
+        font-size: 1.7rem;
+        margin: .9rem 0 .5rem 1.5rem;
+    }
+
+    .Address h2{
+        font-size: 1rem;
+        margin: 0 0 0 1.5rem;
+    }
+        
+    .contact-us{
+        height: 43.5;
+        margin: 4rem auto 0 auto;
+        padding: 3rem 0 2rem 0;
+    }
+
+    .contact-us h1{
+        font-size: 2.6rem;
+        margin: 1rem 0 4rem 0;
+    }
+
+    .cont-layout{
+        margin: 3rem 5rem;
+    }
+
+    .cont-layout h1{
+        font-size: 1.5rem;
+        margin: 0 0 1.5rem 0;
+    } 
+
+    .cont-layout h2{
+        font-size: 1.6rem;
+    }
+
+    .T-C{
+        margin: 1.5rem 0;
+    }
+
+    .T-C h1{
+        font-size: 1.2rem;
+        letter-spacing: .2rem;
+        color: #ecc3e7;
+        font-weight: 500;
+        text-align: center;
+    }
+
 }
 
-.phonePro-logo{
-    scale: .8;
+@media (max-width : 770px){
+    .nav-bar {
+        width: 100%;
+        height: 5rem;
+        border-radius: .4rem;
+        flex-direction: column;
+        background-color: #282e77;
+        display: flex;
+        align-items: center;
+        justify-content: center; 
+        text-align: center;
+    }
+
+    .nav-bar h1 {
+        font-size: 1.4rem;
+        padding: .8rem 1.5rem;
+        background-color: #fff;
+        border-radius: .3rem;
+        margin: 2.5rem 0 0 0;
+    }
+
+    .nav-bar ul{
+        margin: 1.8rem auto 0 auto;
+        padding: 1rem 1.5rem;
+        background-color: #fff;
+        border-radius: .3rem;
+    }
+
+    .nav-bar ul li a {
+        font-size: .9rem;
+    }
+
+    .banner {
+        margin: 5rem 0 0 0;
+    }
+
+    .right-banner{
+        display: none;
+    }
+
+    .sponsored h2{
+        line-height: 1.4rem;
+    }
+
+    .sponsored h3{
+        font-size: 1.4rem;
+    }
+
+    .right-banner img{
+       display: none;
+    }
+
+    .overview h1{
+        font-size: 2rem;
+        margin: 2.5rem 0 1.6rem 0;
+    }
+
+    .overview h2{
+        font-size: .9rem;
+        width: 65%;
+        margin: 2.2rem auto;
+        font-weight: 600;
+        line-height: 1.2rem;
+    }
+
+    .key-diss h1{
+        font-size: 2rem;
+        margin: 1rem 0 2rem 0;
+    }
+
+    .key-elem{
+        width: 70%;
+        box-sizing: border-box;
+    }
+
+    .key-layout h1{
+        width: 80%;
+        line-height: 1.6rem;
+        font-size: 1.1rem;
+        margin: .7rem auto;
+    }
+
+    .cir-9{display: none;}
+    .cir-10{display: none;}
+    .cir-11{display: none;}
+    .cir-12{display: none;}
+    .cir-13{display: none;}
+    .cir-14{display: none;}
+    .cir-15{display: none;}
+    .cir-16{display: none;}
+    .cir-17{display: none;}
+    .cir-18{display: none;}
+    .cir-19{display: none;}
+    .cir-20{display: none;}
+    .cir-21{display: none;}
+    .cir-22{display: none;}
+    .cir-23{display: none;}
+    .cir-24{display: none;}
+
+    .Speakers h1 {
+        font-size: 2.5rem;
+    }
+
+
+    .agenda{
+        padding: 2rem 0 1rem 0;
+    }
+
+    .agenda h1{
+        font-size: 2rem;
+    }
+
+    .agenda h2{
+        font-size: 1.2rem;
+        margin: -.5rem 0 1rem 0;
+    }
+
+    .agenda-divider{
+        margin: 1.5rem auto 1.5rem auto;
+    }
+
+    .left-agen{
+        margin: 0 5rem 0 0;
+    }
+
+    .right-agen{
+        margin: 0 0 0 5rem ;
+    }
+
+    .left-agen h1{
+        font-size: 1rem;
+        margin: 1rem 0 .6rem 0;
+    }
+
+    .left-agen h2{
+        font-size: 1rem;
+        
+    }
+
+    .right-agen h1{
+        font-size: 1rem;
+        margin: .6rem 0 0 0;
+    }
+
+    .right-agen h2{
+        font-size: 1rem;
+        line-height: 1.4rem;
+        width: 30rem;
+        margin: 0;
+    }
+
+    .who-should {
+        padding: 4rem 0 0 0;
+    }
+
+    .who-should h1{
+        font-size: 2rem;
+        margin: 0;
+    }
+
+    .phonePro-logo{
+        scale: .6;
+    }
+
+    .right-wrap{
+        margin: 5rem 0 0 0;
+    }
+
+    .left-who i{
+        margin: 0rem 0 0 0;
+    }
+
+    .tick-logo{
+        scale: .6;
+    }
+
+    .tick-who h1{
+        font-size: 1rem;
+        font-weight: 700;
+        margin: 1.3rem 0 0 0;
+    }
+
+    .tick-who i{
+        margin: 1.4rem 1rem 0 0;
+    }
+
+    .Why-attend h1{
+        font-size: 2rem;
+    }
+
+    .left-lock h2{
+        font-size: 1rem;
+        width: 14rem;
+        margin: -.2rem .4rem 0 0;
+        line-height: 1.5rem;
+    }
+
+    .left-lock i{
+        margin: -.1rem 0 0 .1rem;
+    }
+
+    .lock-logo{
+        scale: .7;  
+    }
+
+    .mid-why i{
+        margin: -2rem 0 0 0;
+    }
+
+    .digilock-logo{
+        scale: .6; 
+    }
+
+    .left-lock{
+        margin: 1.2rem 0;
+    }
+
+    .right-lock{
+        display: flex;
+        margin: 2rem 0;
+    }
+
+    .right-lock h2{
+        font-size: 1rem;
+        width: 14rem; 
+        margin: -.2rem .4rem 0 0;
+        line-height: 1.5rem;  
+    }
+
+    .right-lock i{
+        margin: -.1rem .4rem 0 0;
+    }
+
+    .left-why{ 
+        margin: 0 -8rem 0 0;
+    }
+
+    .right-why{
+        margin: 0 0 0 -8rem;
+    }
+
+    .why-elem{
+        margin: 0 0 2rem 0;
+    }
+
+    .venue{
+        padding: 4rem;
+    }
+
+    .venue h1{
+        font-size: 2rem;
+        margin: 1rem 0 4rem 0;
+    }
+
+    .google-map iframe{
+        height: 20rem;
+        width: 30rem;
+    }
+
+    .Address{
+        width: 40rem;
+        height: 5.8rem;
+        margin: 3rem 0 0;
+    }
+
+    .Address h1{
+        font-size: 1.1rem;
+        margin: .6rem 0 .6rem 1rem;
+    }
+
+    .Address h2{
+        font-size: .9rem;
+        margin: -.3rem 0 0 1rem;
+    }
+        
+    .contact-us{
+        height: 50rem;
+        margin: 4rem auto 0 auto;
+        padding: 3rem 0 0 0;
+    }
+
+    .contact-us h1{
+        font-size: 2rem;
+        margin: 1rem 0 2.5rem 0;
+    }
+
+    .cont-layout{
+        margin: 2rem 3rem;
+    }
+
+    .cont-layout h1{
+        font-size: 1.3rem;
+        margin: 0 0 1.5rem 0;
+    } 
+
+    .cont-layout h2{
+        font-size: 1.1rem;
+    }
+
+    .T-C{
+        margin: 1rem 0;
+    }
+
+    .T-C h1{
+        font-size: .9rem;
+    }
+
 }
 
-.right-wrap{
-    margin: 5rem 0 0 0;
-}
+@media (max-width : 570px){
+    .nav-bar {
+        width: 100%;
+        height: 6rem;
+        border-radius: 0;
+        flex-direction: column;
+        background-color: #3d36a9;
+        margin: 0;  
+    }
 
-.left-who i{
-    margin: 5rem 0 0 0;
-}
+    .nav-bar h1 {
+        font-size: 1.4rem;
+        padding: .8rem 1.5rem;
+        background-color: #fff;
+        border-radius: .3rem;
+        margin: 1rem 0;
+    }
 
-.tick-logo{
-    scale: .7;
-}
+    .nav-bar ul{
+      display: none;
+    }
 
-.tick-who h1{
-    font-size: 1.4rem;
-    font-weight: 700;
-    margin: 2.7rem 0 0 0;
-}
+    .banner {
+        margin: 2rem 0 0 0;
+    }
 
-.tick-who i{
-    margin: 3rem 1rem 0 0;
-}
+    .overview h1 {
+        font-size: 2rem;
+        margin: 1rem 0 1.6rem 0;
+    }
 
-.Why-attend h1{
-    font-size: 2.6rem;
-}
+    .overview h2 {
+        font-size: .8rem;
+        width: 75%;
+        margin: 2.2rem auto;
+        font-weight: 600;
+        line-height: 1.2rem;
+    }
 
-.left-lock h2{
-    font-size: 1.2rem;
-    width: 20rem;
-     margin: -.2rem .4rem 0 0;
-}
+    .left-banner img{
+        height: 3.8rem;
+        width: 16.5rem;
+    }
 
-.left-lock i{
-    margin: -.1rem 0 0 .4rem;
-}
+    .finprint-diji img {
+        width: 6rem;
+        height: 6.3rem;
+    }
 
-.lock-logo{
-    scale: .9;  
-}
+    .diji-insum h1 {
+        font-size: 2.2rem;
+        margin: -.9rem 0 1.5rem 1rem;
+    }
 
-.mid-why i{
-    margin: -2rem 0 0 0;
-}
+    .diji-insum h2 {
+        font-size: 2.2rem;
+        margin: -2.6rem 0 1.5rem 1rem;
+    }
 
-.digilock-logo{
-    scale: .8; 
-}
-
-.right-lock{
-    display: flex;
-    margin: 2rem 0;
-}
-
-.right-lock h2{
-    font-size: 1.2rem;
-    width: 20rem; 
-    margin: -.2rem .4rem 0 0;  
-}
-
-.right-lock i{
-    margin: -.1rem .4rem 0 0;
-}
-
-.why-elem{
-    margin: 0 0 2rem 0;
-}
-
-.venue{
-    padding: 6rem;
-}
-
-.venue h1{
-    font-size: 3rem;
-    margin: 1rem 0 6rem 0;
-}
-
-.google-map iframe{
-    height: 25rem;
-    width: 40rem;
-    border-radius: .5rem;
-}
-
-.Address{
-    width: 60rem;
-    height: 6.5rem;
-    margin: 4rem 0 0;
-}
-
-.Address h1{
-    font-size: 1.7rem;
-    margin: .9rem 0 .5rem 1.5rem;
-}
-
-.Address h2{
-    font-size: 1rem;
-    margin: 0 0 0 1.5rem;
-}
+    .init-to-finance {
+        width: 26.3rem;
+        height: 2.2rem;
+    }
     
-.contact-us{
-    height: 43.5;
-    margin: 4rem auto 0 auto;
-    padding: 3rem 0 2rem 0;
-}
+    .init-to-finance h3 {
+        font-size: .8rem;
+        letter-spacing: .2rem;
+        margin: .5rem 0 0 0;
+    }
 
-.contact-us h1{
-    font-size: 2.6rem;
-    margin: 1rem 0 4rem 0;
-}
+    .sponsored h1 {
+        font-size: .9rem;
+        margin: .8rem 0 .1rem 0;
+    }
 
-.cont-layout{
-    margin: 3rem 5rem;
-}
+    .sponsored img {
+        width: 12rem;
+        height: 2.2rem;
+        margin: .5rem 0 0 0;
+    }
 
-.cont-layout h1{
-    font-size: 1.5rem;
-    margin: 0 0 1.5rem 0;
-} 
+    .sponsored h2 {
+        width: 25rem;
+        font-size: 1rem;
+        line-height: 1.2rem;
+        text-align: center;
+        margin: 1rem auto .8rem auto;
+    }
 
-.cont-layout h2{
-    font-size: 1.6rem;
-}
+    .sponsored h3 {
+        font-size: 1.2rem;
+    }
 
-.T-C{
-    margin: 1.5rem 0;
-}
+    .key-diss h1 {
+        font-size: 1.5rem;
+        margin: 1rem 0 2rem 0;
+    }
 
-.T-C h1{
-    font-size: 1.2rem;
-    letter-spacing: .2rem;
-    color: #ecc3e7;
-    font-weight: 500;
-    text-align: center;
-}
+    .key-layout h1 {
+        width: 80%;
+        line-height: 1.6rem;
+        font-size: 1.1rem;
+        margin: .7rem auto;
+    }
 
+    .Speakers h1 {
+        font-size: 2.5rem;
+        margin: 2rem 0 3rem 0;
+    }
 
+    .photo-layout{
+        margin: 1rem 0;
+    }
 
+    .cir-5{display: none;}
+    .cir-6{display: none;}
+    .cir-7{display: none;}
+    .cir-8{display: none;}
+
+    .agenda h1 {
+        font-size: 1.8rem;
+    }
+
+    .agenda h2 {
+        font-size: 1rem;
+        margin: -.2rem 0 1rem 0;
+    }
+
+    .left-agen h1 {
+        font-size: .9rem;
+    }
+
+    .left-agen h2 {
+        font-size: .9rem;
+    }
+    
+    .right-agen h1 {
+        font-size: .9rem;
+        margin: .3rem 0 0 0;
+    }
+
+    .right-agen h2 {
+        font-size: .9rem;
+        line-height: 1.2rem;
+        width: 11rem;
+    }
+
+    .who-divider {
+        flex-direction: column;
+    }
+
+    .who-should h1 {
+        font-size: 1.5rem;
+        margin: 0;
+    }
+
+    .left-who{
+        display: flex;
+    }
+
+    .left-who i{
+        margin: -3rem auto 0 auto;
+
+    }
+
+    .right-wrap {
+        margin: -3rem 0 3rem 0;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .who-should h1 {
+        font-size: 1rem;
+        margin: 0;
+    }
+
+    .tick-who i {
+        margin: .3rem 1rem 0 5rem;
+    }
+
+    .Why-attend h1 {
+        font-size: 2rem;
+        margin: 4rem 0 2rem 0;
+    }
+
+    .why-elem {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .left-why {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    .left-lock h2 {
+        text-align: left;
+    }
+
+    .left-lock i {
+        margin: -.3rem 0 0 -.8rem;
+    }
+
+    .mid-why{
+        margin: -1rem 0 0 0;
+    }
+
+    .right-why {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: -5rem auto 0 auto;
+    }
+
+    .google-map iframe {
+        height: 12rem;
+        width: 22.5rem;
+    }
+
+    .Address {
+        width: 23rem;
+        height: 7.8rem;
+        margin: 3rem 0 0;
+    }
+
+    .Address h1 {
+        font-size: 1rem;
+        margin: .8rem 0 .6rem 1.2rem;
+        line-height: 1.4rem;
+    }
+
+    .Address h2 {
+        font-size: .9rem;
+        margin: 0 0 0 1.2rem;
+        line-height: 1.4rem;
+        letter-spacing: .1rem;
+    }
+
+    .contact-us {
+        padding: 0;
+    }
+    .contact-elem {
+        margin: -1rem 0 0 0;
+    }
+
+    .contact-us {
+        height: 45rem;
+    }
+
+    .contact-us h1 {
+        font-size: 1.5rem;
+        margin: 2rem 0 1.5rem 0;
+    }
+
+    .cont-layout h1 {
+        font-size: 1rem;
+        margin: 0 0 1.3rem 0;
+    }
+
+    .cont-layout h2 {
+        font-size: 1rem;
+    }
+
+    .mail-logo h2 {
+        font-size: .9rem;
+    }
+
+    .call-logo h2 {
+        font-size: .9rem;
+    }
+
+    .T-C h1 {
+        font-size: .8rem;
+        padding: .5rem 0;
+        line-height: 1rem;
+    }
 
 }
