--- a/css/viacom.css
+++ b/css/viacom.css
@@ -790,6 +790,20 @@ body{
     text-align: center;
 }
 
+.menu-btn{
+    display: none;
+}
+
+span{
+    color: #000;
+    font-size: 1.8rem;
+    font-weight: bolder;
+    cursor: pointer;
+    position: absolute;
+    left: 89%;
+    top: 2.4%;
+}
+
 @media (max-width : 1120px){
     .nav-bar {
         width: 70rem;
@@ -1172,6 +1186,7 @@ body{
     }
 
     .nav-bar ul{
+        display: flex;
         margin: 1.8rem auto 0 auto;
         padding: 1rem 1.5rem;
         background-color: #fff;
@@ -1462,7 +1477,7 @@ body{
 @media (max-width : 570px){
     .nav-bar {
         width: 100%;
-        height: 6rem;
+        height: auto;
         border-radius: 0;
         flex-direction: column;
         background-color: #3d36a9;
@@ -1471,14 +1486,24 @@ body{
 
     .nav-bar h1 {
         font-size: 1.4rem;
-        padding: .8rem 1.5rem;
+        padding: .4rem 1.2rem;
         background-color: #fff;
         border-radius: .3rem;
-        margin: 1rem 0;
+        margin: 1.5rem 0;
     }
 
     .nav-bar ul{
-      display: none;
+        display: none;
+        margin: .5rem auto 2rem auto;
+        flex-direction: column;
+    }
+
+    .nav-bar ul li {
+         margin: .3rem 0;
+    }
+
+    .nav-bar ul li a {
+        font-weight: 600;
     }
 
     .banner {
@@ -1739,6 +1764,11 @@ body{
         font-size: .8rem;
         padding: .5rem 0;
         line-height: 1rem;
+    }
+
+    
+    .menu-btn{
+        display: flex;
     }
 
 }
